// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/slider/demo/basic.md correctly 1`] = `
<div
  class="am-slider-example"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="30"
          aria-valuemin="0"
          aria-valuenow="26"
          class="am-slider-handle"
          role="slider"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider with ToolTip
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="30"
          aria-valuemin="0"
          aria-valuenow="26"
          class="am-slider-handle"
          role="slider"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Disabled Slider
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider am-slider-disabled"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          aria-disabled="true"
          aria-valuemax="30"
          aria-valuemin="0"
          aria-valuenow="26"
          class="am-slider-handle"
          role="slider"
          style="left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider With Customized Color
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
          style="background-color:blue;height:5px;"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;background-color:red;height:5px;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div
          aria-disabled="false"
          aria-valuemax="30"
          aria-valuemin="0"
          aria-valuenow="26"
          class="am-slider-handle"
          role="slider"
          style="border-color:blue;height:14px;width:14px;margin-left:-7px;margin-top:-4.5px;background-color:blue;left:86.66666666666667%;"
        />
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/slider/demo/custom-tooltip.md correctly 1`] = `
<div
  class="am-slider-example"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <p
      class="title"
    >
      Slider with Customized ToolTip
    </p>
    <div
      class="am-slider-wrapper"
    >
      <div
        class="am-slider"
      >
        <div
          class="am-slider-rail"
        />
        <div
          class="am-slider-track"
          style="visibility:visible;left:0%;width:86.66666666666667%;"
        />
        <div
          class="am-slider-step"
        />
        <div>
          <div
            class="am-slider-handle"
            max="30"
            min="0"
            style="left:86.66666666666667%;"
          />
          <div
            style="text-align:center;"
          />
        </div>
        <div
          class="am-slider-mark"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/slider/demo/icon-slider.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <div
      class="iconWrapper"
    >
      <svg
        class="am-icon am-icon-check-circle am-icon-md anticon-highlight"
      >
        <use
          xlink:href="#check-circle"
        />
      </svg>
      <div
        class="am-wingblank am-wingblank-md"
      >
        <div
          class="am-slider-wrapper"
        >
          <div
            class="am-slider"
          >
            <div
              class="am-slider-rail"
            />
            <div
              class="am-slider-track"
              style="visibility:visible;left:0%;width:0%;"
            />
            <div
              class="am-slider-step"
            />
            <div
              aria-disabled="false"
              aria-valuemax="20"
              aria-valuemin="0"
              aria-valuenow="0"
              class="am-slider-handle"
              role="slider"
              style="left:0%;"
            />
            <div
              class="am-slider-mark"
            />
          </div>
        </div>
      </div>
      <svg
        class="am-icon am-icon-cross-circle am-icon-md"
      >
        <use
          xlink:href="#cross-circle"
        />
      </svg>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;
